# EngineLab

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.sln  EngineLab.sln  EngineLab.vcxproj  LICENSE  README.md  compile.bat
Engine/: Engine.vcxproj  Engine.vcxproj.filters  Framebuffer.cpp  Framebuffer.h  RenderPass.h
Engine/src/: Engine.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Engine/src/Engine/Core/: Application.h  Assert.h  Core.h  EntryPoint.h  Log.h  Ref.h  Window.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h
Engine/src/Engine/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Engine/src/Engine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/src/Engine/Renderer/: Renderer.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h
SandBox/: SandBox.vcxproj
SandBox/src/: SandBox.cpp
engine/: compile-shaders.bat
engine/shaders/: simple_shader.glsl  simple_shader.vert.spv
engine/vulkan/: defines.h  device.cpp  device.h  first_app.cpp  first_app.h  main.cpp  pipeline.cpp  pipeline.h  window.cpp  window.h
note/: notes.md
